# Project-Brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: calc_game.py  cli.py  even_game.py  evklid.py  games_core.py  is_prime.py  nod.py
brain_games/games/: arithm_progress_game.py  calc_game.py  even_game.py  gcd_game.py  prime_game.py
brain_games/scripts/: .brain_games.py.swp  brain_arithm_progress.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
